examples/errors/header/invalid_key.abc
X:1
T:Invalid Key
K:Xmajor
% H008: Invalid key signature
CDEF|
